Added 'deleteContact' callback to 'ContactView'

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <dt>Tel:</dt><dd><%= tel %></dd>
                 <dt>Email:</dt><dd><a href="mailto:<%= email %>"><%= email %></a></dd>
             </dl>
+            <button class="delete">Delete</button>
         </script>
         <script src="js/vendors/jquery-1.7.1.min.js"></script>
         <script src="js/vendors/json2.js"></script>
