--- a/index.html
+++ b/index.html
@@ -25,11 +25,27 @@
           </footer>
       </div>
 
+      <div id="instructions">
+        Double-click to edit a todo.
+      </div>
+
       <script src="vendor/json2.js"></script>
       <script src="vendor/jquery.js"></script>
       <script src="vendor/underscore.js"></script>
       <script src="vendor/backbone.js"></script>
       <script src="backbone.localStorage.js"></script>
       <script src="todos.js"></script>
+
+      <!-- Templates -->
+
+      <script type="text/template" id="item-template">
+        <div class="view">
+          <input class="toggle" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
+          <label><%- title %></label>
+          <a class="destroy"></a>
+        </div>
+        <input class="edit" type="text" value="<%- title %>" />
+      </script>
+
     </body>
 </html>
