--- a/index.html
+++ b/index.html
@@ -47,5 +47,12 @@
         <input class="edit" type="text" value="<%- title %>" />
       </script>
 
+      <script type="text/template" id="stats-template">
+        <% if (done) { %>
+          <a id="clear-completed">Clear <%= done %> completed <%= done == 1 ? 'item' : 'items' %></a>
+        <% } %>
+        <div class="todo-count"><b><%= remaining %></b> <%= remaining == 1 ? 'item' : 'items' %> left</div>
+      </script>
+
     </body>
 </html>
